# pallet_detector_perceptor

./: .gitignore  CMakeLists.txt  PALLET_PIPELINE.md  README.md  chapter4_simulation_framework(1).md  package.xml  package_old.xml  target_detector
.recovered/: Detection.msg.recovered  pallet_perceptor.cpp.recovered  pallet_perceptor.h.recovered
action/: Detect.action
alvar_markers/: MarkerData_0_1.xml
cfg/: column_perceptor.cfg  target_detector.cfg
config/: barrel_detector.yaml  composite_detectors.yaml  detectors.yaml  lidar_reflector.yaml  primitive_detectors.yaml  target_detector.yaml  trackers.yaml
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.fish
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/target_detector/: .catkin  .rosinstall  local_setup.fish
devel/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
include/: alvar_perceptor.h  barrel_perceptor.h  baseline_pair_perceptor.h  color_in_roi_perceptor.h  column_perceptor.h  detector_base.h  pallet_perceptor.h  reflector_perceptor.h  tmk_uwb_perceptor.h  vertical_cylinder_perceptor.h
include/detectors/: cluster.h  color_in_roi_detector.h  column_detector.h  detector_pcl_barrel.h  detector_pcl_base.h  pallet_detector.h  pcl_base_detector.h  reflector_detector.h  vertical_cylinder_detector.h
include/marker_reflector/: cluster.h  marker_reflector.h
include/target_detector/: cluster.h  detector_base.h  detector_column.h  detector_lidar_2d.h  detector_reflector.h  node.h  node_alvar.h  node_base.h  node_lidar_2d.h  target_detector.h  target_detector_node.h
include_old/target_detector/: cluster.h  detector_reflector.h  node_base.h  node_baseline_pair.h
launch/: alvar_only.launch  barrel_detector_from_bag.launch  color_in_roi_detector_from_bag.launch  eval_only.launch  pallet_detector_duna_walledcubes.launch  pallet_detector_simulation.launch  sweep_envelope.launch  target_detector.launch  target_detector_alvar_realsense.launch  vertical_cylinder_detector_from_bag.launch
logs/target_detector/: build.cmake.000.log.stderr
msg/: Color.msg  Detection.msg  Detections.msg
rviz/: barrel_detector.rviz  color_in_roi_detector.rviz  pallet_detector.rviz  pallet_detector_1.rviz  pallet_detector_2.rviz  target_detector_alvar_realsense.rviz  vertical_cylinder_detector.rviz
sim/models/camera_stand/: model.config  model.sdf
sim/models/pallet_realistic/: model.sdf
sim/scripts/: add_pointcloud_noise.py  evaluate_pallet_pose.py  plot_convention_figure.py  plot_envelope_heatmap.py  plot_pose_eval.py  plot_world_scatter.py  publish_camera_tf.py  sweep_position_grid.py
sim/urdf/: camera_stand.urdf
sim/worlds/: pallet_camera.world
src/: alvar_perceptor.cpp  alvar_perceptor_main.cpp  barrel_perceptor.cpp  barrel_perceptor_main.cpp  baseline_pair_perceptor.cpp  baseline_pair_perceptor_main.cpp  cluster.cpp  color_in_roi_perceptor.cpp  color_in_roi_perceptor_main.cpp  column_perceptor.cpp  column_perceptor_main.cpp  detector_column.cpp  detector_reflector.cpp  main.cpp  main_lidar_2d.cpp  node.cpp  node_alvar.cpp  node_base.cpp  node_baseline_pair.cpp  node_lidar_2d.cpp  pallet_perceptor.cpp  pallet_perceptor_main.cpp  reflector_perceptor.cpp  reflector_perceptor_main.cpp  target_detector.cpp  target_detector_main.cpp  target_detector_node.cpp  tmk_uwb_perceptor.cpp  tmk_uwb_perceptor_main.cpp  vertical_cylinder_perceptor.cpp  vertical_cylinder_perceptor_main.cpp
src/detectors/: cluster.cpp  color_in_roi_detector.cpp  column_detector.cpp  detector_pcl_barrel.cpp  detector_pcl_base.cpp  pallet_detector.cpp  pcl_base_detector.cpp  reflector_detector.cpp  vertical_cylinder_detector.cpp
src/marker_reflector/: cluster.cpp  marker_reflector.cpp
src/tests/: test_detector_column.cpp  test_detector_reflector.cpp
src_old/: main_alvar.cpp  main_baseline_pair.cpp  node_base.cpp  target_detector.cpp
src_old/tests/: test_cluster.cpp
srv/: Detector.srv  DetectorEnable.srv
