<?xml version="1.0"?>
<package format="2">
  <name>target_detector</name>
    <version>0.0.0</version>
    <description>
       Detector of targets such as reflector markers, QR's or pallets
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="andreu@beta-robots.com">Andreu Corominas-Murtra</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>Beta Robots</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">https://gitlab.com/beta-robots/mobile_robotics/modules/target_detector</url>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <author email="andreu@beta-robots.com">Andreu Corominas-Murtra</author>

	<!-- The *_depend tags are used to specify dependencies: they can be catkin packages or system dependencies -->
	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>message_generation</depend>
	<depend>tf2_eigen</depend>
	<depend>geometry_msgs</depend>
	<depend>reflector_finder</depend>
	<depend>ar_track_alvar_msgs</depend>

</package>
